fix(styles): change default font size, color gray
The old gray color was too dark for the UI so that
I use a lighter one.

The old font size was too big for the UI so that I
use a smaller one.

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -9,6 +9,6 @@ html {
   flex-direction: column;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   font-weight: normal;
 }
