--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,6 @@
 $red: #ff0055;
 $blue: #0364ee;
-$gray: #d1d2de;
+$gray: #e5e5e5;
 $dark-gray: #717c96;
 $black: #353839;
 $white: #ffffff;
