--- a/src/components/gameHost/gameHost.scss
+++ b/src/components/gameHost/gameHost.scss
@@ -4,7 +4,6 @@
   padding: 15px;
   background-color: variables.$gray;
   color: variables.$black;
-  font-size: 0.8rem;
   text-align: center;
   border-bottom: 1px solid variables.$dark-gray;
   position: sticky;
